Fix CSS error (always-visible-help error)

--- a/public/stylesheets/sass/frontend.sass
+++ b/public/stylesheets/sass/frontend.sass
@@ -1114,20 +1114,22 @@ ul.error_messages
           :padding 0.5em 1em
           +rounded-top-6px
           :text-shadow 0 1px 1px #FFFFFF
+        .always-visible-help
+          :border 1px solid #ccc
+          :background #efefef
+          p
+            margin: 0
+            padding: 5px 10px
+            font-size: 1em
+            color: #555
         
-        .contents, .help
+        .contents
           :border 1px solid #ccc
           :border-top 0
           :background #efefef
           :padding 0
           :margin 0
           :position relative
-        .help
-          p
-            margin: 0
-            padding: 5px 10px
-            font-size: 1em
-            color: #555
           h3
             :padding 0.5em 1em 0 1em
             :margin 0
